; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_LockBufHdr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/buffer/extr_bufmgr.c_LockBufHdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@BM_LOCKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LockBufHdr(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = call i32 @init_local_spin_delay(i32* %3)
  br label %6

6:                                                ; preds = %1, %16
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* @BM_LOCKED, align 4
  %10 = call i32 @pg_atomic_fetch_or_u32(i32* %8, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @BM_LOCKED, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %6
  br label %18

16:                                               ; preds = %6
  %17 = call i32 @perform_spin_delay(i32* %3)
  br label %6

18:                                               ; preds = %15
  %19 = call i32 @finish_spin_delay(i32* %3)
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @BM_LOCKED, align 4
  %22 = or i32 %20, %21
  ret i32 %22
}

declare dso_local i32 @init_local_spin_delay(i32*) #1

declare dso_local i32 @pg_atomic_fetch_or_u32(i32*, i32) #1

declare dso_local i32 @perform_spin_delay(i32*) #1

declare dso_local i32 @finish_spin_delay(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
